Kapitel in Latex teils befüllt, unnötige Sachen rausgeklammert, erste formatierungen

--- a/Dokumentation/Latex Doku/vorlage.tex
+++ b/Dokumentation/Latex Doku/vorlage.tex
@@ -115,12 +115,18 @@ amsmath
 \mainmatter                        %Hauptteil (ab hier arab. Seitenzahlen)
 %--------------------------------------------------------------------------
 % Kapitell werden einzeln abgespeichert und hier eingefügt
-\input{chapters/Einleitung}
-\input{chapters/Problemstellung}
-\input{chapters/Aufgabenstellung}
-\input{chapters/Inhalt}
-\input{chapters/Stile}
-\input{chapters/Beispiel}
+%\input{chapters/Einleitung}
+%\input{chapters/Problemstellung}
+%\input{chapters/Aufgabenstellung}
+%\input{chapters/Inhalt}
+%\input{chapters/Stile}
+%\input{chapters/Beispiel}
+\input{chapters/Motivation}
+\input{chapters/Zielsetzung}
+\input{chapters/Umsetzung}
+\input{chapters/Elemente}
+\input{chapters/Anleitung}
+
 % ...
 
 %--------------------------------------------------------------------------
@@ -131,13 +137,13 @@ amsmath
 % - use bibstyle 'geralpha', 'gerplain', ...
 %\bibliographystyle{gerplain}
 \bibliographystyle{geralpha}
-\bibliography{literatur}     %BibTeX-File literatur.bib
+%\bibliography{literatur}     %BibTeX-File literatur.bib
 %--------------------------------------------------------------------------
 \printindex % Index ausdrücken - optional
 %--------------------------------------------------------------------------
 % Anhänge sind optional
-\begin{appendix}
-   \include{chapters/AnhangA}   
-   \include{chapters/AnhangB} 
-\end{appendix}
+%\begin{appendix}
+%   \include{chapters/AnhangA}   
+%   \include{chapters/AnhangB} 
+%\end{appendix}
 \end{document}
