--- a/Dokumentation/Latex Doku/vorlage.tex
+++ b/Dokumentation/Latex Doku/vorlage.tex
@@ -78,27 +78,28 @@ amsmath
 \begin{document}
 
 %------------------------- Titelblatt -------------------------------------
-\title{Titel der Projekt- Abschlussarbeit auf Deutsch}
-\subtitle{English Title of Project Work}
+\title{Behavior Tree-Engine und -Editor in Unity}
+%\subtitle{English Title of Project Work}
 %---- Die Art der Dokumentation kann hier ausgewählt werden---------------
 %\project{Master Abschlussarbeit}
 %\project{Master Projektstudium}
 %\project{Bachelor Abschlussarbeit}
-%\project{Projektarbeit}
+\project{KI - Projektarbeit}
 %\project{Seminar zur Vorlesung ...}
-\project{Hausarbeit zur Vorlesung ...}
+%\project{Hausarbeit zur Vorlesung ...}
 %--------------------------------------------------------------------------
-\supervisor{Titel Vorname Name} % Betreuer der Arbeit
-\author{Autor} %Autor der Arbeit
-\address{Ort,} % Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
-\submitdate{Abgabedatum} % Abgabedatum
+\supervisor{Prof. Dr. Christof Rezk-Salama} % Betreuer der Arbeit
+\author{Jeremias Boos und Philipp Rath} %Autor der Arbeit
+\address{Trier,} % Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
+\submitdate{7. September 2014} % Abgabedatum
 %\begingroup
 %  \renewcommand{\thepage}{title}
 %  \mytitlepage
 %  \newpage
 %\endgroup
+
 \begingroup
-  \renewcommand{\thepage}{Titel}
+  \renewcommand{\thepage}{Behavior Tree-Creator mit Testfunktion in Unity}
   \mytitlepage
   \newpage
 \endgroup
@@ -110,7 +111,7 @@ amsmath
 %\input{chapters/Kurzfassung} % Kurzfassung Deutsch/English
 \tableofcontents %Inhaltsverzeichnis - notwendig
 \listoffigures % Abbildungsverzeichnis - optional
-\listoftables % Tabellenverzeichnis- optional
+%\listoftables % Tabellenverzeichnis- optional
 %--------------------------------------------------------------------------
 \mainmatter                        %Hauptteil (ab hier arab. Seitenzahlen)
 %--------------------------------------------------------------------------
