Fehler behoben, Screenshots untertitelt, Fazit als Kapiztel eingefügt

--- a/Dokumentation/Latex Doku/vorlage.tex
+++ b/Dokumentation/Latex Doku/vorlage.tex
@@ -99,7 +99,7 @@ amsmath
 %\endgroup
 
 \begingroup
-  \renewcommand{\thepage}{Behavior Tree-Creator mit Testfunktion in Unity}
+  \renewcommand{\thepage}{Behaviour Tree-Creator mit Testfunktion in Unity}
   \mytitlepage
   \newpage
 \endgroup
@@ -127,6 +127,7 @@ amsmath
 \input{chapters/Elemente}
 \input{chapters/Umsetzung}
 \input{chapters/Anleitung}
+\input{chapters/Fazit}
 
 % ...
 
